Selection Tookit package v1/retrieveOutput/objects/Interview__c.object
<CustomObject>
    <description>This object include interview records</description>
    <fields>
        <fullName>Candidate_Name__c</fullName>
        <label>Candidate Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate</label>
        <referenceTo>Candidate__c</referenceTo>
        <relationshipLabel>Interviews</relationshipLabel>
        <relationshipName>Interviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Interview_Date__c</fullName>
        <label>Interview Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interviewer_Email__c</fullName>
        <label>Interviewer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Interviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Interviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunities__c</fullName>
        <label>Opportunities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Overall_Score1__c</fullName>
        <formula>(Score_1__c  + Score_2__c + Score_3__c) / 3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_Score__c</fullName>
        <label>Overall Score</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Position_Name__c</fullName>
        <label>Position Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Position</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Interviews</relationshipLabel>
        <relationshipName>Interviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recruitment_Coordinator_Email__c</fullName>
        <label>Recruitment Coordinator Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Recruitment_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recruitment Coordinator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Recruitment_Coordinators</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Score_1__c</fullName>
        <label>Score 1</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_2__c</fullName>
        <label>Score 2</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_3__c</fullName>
        <label>Score 3</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Selected_Anchors__c</fullName>
        <label>Selected_Anchors</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Selected_Question_1__c</fullName>
        <label>Selected Question 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_Question_2__c</fullName>
        <label>Selected Question 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_Question_3__c</fullName>
        <label>Selected Question 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strengths__c</fullName>
        <label>Strengths</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Interview</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Candidate_Name__c</columns>
        <columns>End_Time__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Interviews</fullName>
        <columns>NAME</columns>
        <columns>Candidate_Name__c</columns>
        <columns>End_Time__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Interviews</label>
        <sharedTo>
            <role>HR_Business_Partner</role>
            <role>Interviewer</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>INT-{0000000}</displayFormat>
        <label>Interview Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interviews</pluralLabel>
    <recordTypes>
        <fullName>Cultural_Bar_Raiser</fullName>
        <active>true</active>
        <label>Cultural Bar Raiser</label>
    </recordTypes>
    <recordTypes>
        <fullName>EBM</fullName>
        <active>true</active>
        <label>EBM</label>
    </recordTypes>
    <recordTypes>
        <fullName>Head_Of_Function</fullName>
        <active>true</active>
        <label>Head Of Function</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hiring_Manager</fullName>
        <active>true</active>
        <label>Hiring Manager</label>
    </recordTypes>
    <recordTypes>
        <fullName>Key_Challenger</fullName>
        <active>true</active>
        <label>Key Challenger</label>
    </recordTypes>
    <recordTypes>
        <fullName>People_Manager</fullName>
        <active>true</active>
        <label>People Manager</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>